user/templates/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: micro-user-svc
spec: 
  ports: 
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector: 
    microservice: user
  type: ClusterIP
