user/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: micro-user-ingress
  annotations:
    http.port: "80"
spec:
  backend:
    serviceName: micro-user-svc
    servicePort: 80
  # rules:
  # - host:
  #   http:
  #     paths:
  #     - path: /gg1
  #       backend:
  #         serviceName: micro-user-svc
  #         servicePort: 3000
